# dependabot-investigation

./: Cargo.toml
.github/: dependabot.yml
all-is-cubes/: Cargo.toml
all-is-cubes-base/: Cargo.toml
problem/: Cargo.toml
