[workspace]
members = ["problem"]

[workspace.dependencies]
all-is-cubes-base = { path = "all-is-cubes-base", default-features = false }
itertools = { version = "0.12.0", default-features = false, features = ["use_alloc"] }

[workspace.lints]
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unsafe_op_in_unsafe_fn = "deny"
clippy.shadow_unrelated = "allow" # would use except for <https://github.com/rust-lang/rust-clippy/issues/10780>
clippy.should_panic_without_expect = "deny"
clippy.pedantic = { level = "warn", priority = -1 }
