[package]
name = "all-is-cubes-base"
version = "0.8.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Helper library for all-is-cubes. Do not use directly."
repository.workspace = true
license = "MIT OR Apache-2.0"
categories = [] # not for general use
keywords = ["all-is-cubes"] # but we'll at least label it as being part of the family

[dependencies]
