[package]
name = "all-is-cubes"
version = "0.8.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Recursive voxel game engine. Can be used for voxel raytracing."
license = "MIT OR Apache-2.0"
# TODO: revisit categories once it's more settled how useful this is as a game engine
categories = ["games", "graphics", "rendering::engine"]
keywords = ["all-is-cubes", "voxel"]

[package.metadata.docs.rs]
features = ["arbitrary", "save", "std"]

[lib]
# Disable running as benchmark so that the default doesn't interfere with Criterion usage.
bench = false

[dependencies]
all-is-cubes-base = { workspace = true }
itertools = { workspace = true }
